[package]
name = "actix-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_json = "1.0.79"
actix-web = "4"
futures = "0.3.21"
jsonwebtoken = "8.0.1"
rust-crypto = "0.2.36"
async-trait = "0.1.53"
log = "0.4"
dyn-clone = "1.0.5"